force-app/main/default/objects/OpportunityLeadProduct__c/OpportunityLeadProduct__c.object-meta.xml
<CustomObject>
    <label>Lead Assets</label>
    <nameField>
        <label>OpportunityLeadProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>